kubernetes/core/flux-system/flux-instance/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  hostnames:
    - "flux-webhook-${CLUSTER_NAME}.${DOMAIN}"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-public
      namespace: network
      sectionName: websecure
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - group: ""
          kind: Service
          name: webhook-receiver
          namespace: flux-system
          port: 80
